--- a/src/css/App.css
+++ b/src/css/App.css
@@ -36,3 +36,11 @@
     transform: rotate(360deg);
   }
 }
+
+.lottery-ticket {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  height: 525px; 
+}
